--- a/p6.html
+++ b/p6.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Rothko Painting</title>
+    <title>Rothko Painting for box model</title>
     <link href="./p6.css" rel="stylesheet">
 </head>
 
