--- a/p7.html
+++ b/p7.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photo Gallery</title>
+    <title>Photo Gallery for flex</title>
     <link rel="stylesheet" href="./p7.css">
 </head>
 
