--- a/p8.html
+++ b/p8.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Nutrition Label</title>
+    <title>Nutrition Label for typography</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
     <link href="./p8.css" rel="stylesheet">
 </head>
